Replace occurences of 'master' by 'main' to fix CI, examples and documentation's link
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/doc/README.adoc
+++ b/doc/README.adoc
@@ -469,7 +469,7 @@ targets:
         repository: "charts"
         token: {{ requiredEnv "GITHUB_TOKEN" }}
         username: "updatecli"
-        branch: "master"
+        branch: "main"
 ```
 
 == Continuous Update
