Replace occurences of Jenkins 'master' by Jenkins 'controller'
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/README.adoc
+++ b/README.adoc
@@ -60,7 +60,7 @@ targets:
     kind: yaml
     spec:
       file: "charts/jenkins/values.yaml"
-      key: "jenkins.master.imageTag"
+      key: "jenkins.controller.imageTag"
     scm:
       github:
         user: olblak
