--- a/doc/README.adoc
+++ b/doc/README.adoc
@@ -569,7 +569,7 @@ on:
 
 jobs:
   update_cli:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
