--- a/README.adoc
+++ b/README.adoc
@@ -1,10 +1,10 @@
 = Updatecli
 
-link:https://github.com/olblak/updatecli/blob/main/LICENSE[image:https://img.shields.io/github/license/olblak/updatecli[GitHub]]
-link:https://goreportcard.com/report/github.com/olblak/updatecli[image:https://goreportcard.com/badge/github.com/olblak/updatecli[Go Report Card]]
+link:https://github.com/updatecli/updatecli/blob/main/LICENSE[image:https://img.shields.io/github/license/updatecli/updatecli[GitHub]]
+link:https://goreportcard.com/report/github.com/updatecli/updatecli[image:https://goreportcard.com/badge/github.com/updatecli/updatecli[Go Report Card]]
 link:https://hub.docker.com/r/olblak/updatecli[image:https://img.shields.io/docker/pulls/olblak/updatecli?label=olblak%2Fupdatecli&logo=docker&logoColor=white[Docker Pulls]]
-link:https://github.com/olblak/updatecli/releases[image:https://img.shields.io/github/downloads/olblak/updatecli/latest/total[GitHub Releases]]
-link:https://github.com/olblak/updatecli/actions?query=workflow%3AGo[image:https://img.shields.io/github/workflow/status/olblak/updatecli/Go[GitHub Workflow Status]]
+link:https://github.com/updatecli/updatecli/releases[image:https://img.shields.io/github/downloads/updatecli/updatecli/latest/total[GitHub Releases]]
+link:https://github.com/updatecli/updatecli/actions?query=workflow%3AGo[image:https://img.shields.io/github/workflow/status/updatecli/updatecli/Go[GitHub Workflow Status]]
 link:https://gitter.im/Updatecli/community#[image:https://img.shields.io/gitter/room/updatecli/community[Gitter]]
 
 
@@ -93,8 +93,8 @@ Do we have to update the key "jenkins.controller.imageTag" from file "./charts/j
 
 [cols="4*","header"]
 |===
-|link:https://github.com/olblak/updatecli/blob/main/LICENSE[LICENSE]
-|link:https://github.com/olblak/updatecli/blob/main/doc/CONTRIBUTING.adoc[CONTRIBUTING]
-|link:https://github.com/olblak/updatecli/blob/main/doc/README.adoc[DOCUMENTATION]
-|link:https://github.com/olblak/updatecli/blob/main/doc/ADOPTERS.md[ADOPTERS]
+|link:https://github.com/updatecli/updatecli/blob/main/LICENSE[LICENSE]
+|link:https://github.com/updatecli/updatecli/blob/main/doc/CONTRIBUTING.adoc[CONTRIBUTING]
+|link:https://github.com/updatecli/updatecli/blob/main/doc/README.adoc[DOCUMENTATION]
+|link:https://github.com/updatecli/updatecli/blob/main/doc/ADOPTERS.md[ADOPTERS]
 |===
