--- a/README.adoc
+++ b/README.adoc
@@ -16,7 +16,7 @@ You describe your update strategy in a file then you run updatecli to it.
 
 Updatecli reads a yaml or a go template configuration file, then works into three stages
 
-1. Source: Based on a rule, updatecli fetches a value that will be injected in later stages.
+1. Sources: Based on a rule, updatecli fetches a value that will be injected in later stages.
 2. Conditions: Ensure that conditions are met based on the value retrieved during the source stage.
 3. Target: Update and publish the target files based on a value retrieved from the source stage.
 
@@ -33,21 +33,18 @@ They are many projects out there, which can continuously update your files but t
 
 == Example
 In this example, we define an update strategy in "updatecli.yaml" then we run `updatecli apply --config updatecli.yaml`.
-Our objective is to know if the Jenkins project published a new version, if they build an appropriated docker image and automatically update our infrastructure accordingly.
+Our objective is to know if the Jenkins project published a new stable version, if they build an appropriated docker image specifically for jdk11 and automatically update our infrastructure accordingly.
 
 [cols="2a,2a"]
 |===
 |```
 ## updatecli.yaml
-source:
-  kind: maven
-  postfix: "-jdk11"
-  spec:
-    owner: "maven"
-    url: "repo.jenkins-ci.org"
-    repository: "releases"
-    groupID: "org.jenkins-ci.main"
-    artifactID: "jenkins-war"
+sources:
+  default:
+    kind: jenkins
+    postfix: "-jdk11"
+    spec:
+      release: stable
 conditions:
   docker:
     name: "Docker Image Published on Registry"
@@ -74,8 +71,8 @@ targets:
 
 |What it says:
 
-. Source: +
-What's the latest version for the artifactID "jenkins-war" from the maven repository "releases" located on "repo.jenkins-ci.org"? +
+. Sources: +
+What's the latest jenkins stable version? +
 => 2.264 +
 Append "-jdk11" to it +
 => 2.264-jdk11 +
@@ -90,11 +87,12 @@ Do we have to update the key "jenkins.controller.imageTag" from file "./charts/j
 
 |===
 
+More link:https://www.updatecli.io/docs/prologue/introduction/[Introduction]
 
 [cols="4*","header"]
 |===
 |link:https://github.com/updatecli/updatecli/blob/main/LICENSE[LICENSE]
 |link:https://github.com/updatecli/updatecli/blob/main/doc/CONTRIBUTING.adoc[CONTRIBUTING]
-|link:https://github.com/updatecli/updatecli/blob/main/doc/README.adoc[DOCUMENTATION]
+|link:https://www.updatecli.io/docs/prologue/introduction/[DOCUMENTATION]
 |link:https://github.com/updatecli/updatecli/blob/main/doc/ADOPTERS.md[ADOPTERS]
 |===
